[tool.poetry]
name = "flask-mod-auth-gssapi"
version = "0.2.0"
description = "A Flask extention to make use of the authentication provided by the mod_auth_gssapi extention of Apache's HTTPd."

license = "MIT"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = "README.md"
keywords = ["security", "web"]
repository = "https://github.com/fedora-infra/flask-mod-auth-gssapi"
homepage = "https://github.com/fedora-infra/flask-mod-auth-gssapi"

include = [
    "tox.ini",
    "config/*",
    "docs/*/*",
    "tests/*",
]

classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8.0"
flask = "<3.0.0"
gssapi = "^1.6.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
bandit = "*"
black = "*"
isort = "*"
coverage = {extras = ["toml"], version = "*"}

[tool.isort]
profile = "black"
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["flask_mod_auth_gssapi"]

[tool.coverage.paths]
source = ["flask_mod_auth_gssapi"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
omit = [
    "flask_mod_auth_gssapi/__init__.py"
]


[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
